--- a/MonsterMash2023/manifest.json
+++ b/MonsterMash2023/manifest.json
@@ -1,7 +1,7 @@
 {
     "id": "Kernelmethod_MM23",
-    "title": "",
-    "description": "",
+    "title": "{{psychalflesh|Mycogrigoric Alcoves}}",
+    "description": "Adds the mycogrigori, a society of fungal-human symbiotes who occupy ancient waygates left by the Eaters.",
     "version": "0.1.0",
     "author": "{{G|kernelmethod}}",
     "tags": "Creature",
